[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/01/icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/character_display/CharacterDisplay.gd" type="Script" id=2]
[ext_resource path="res://UI/VSliderWithPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_fonts/lmroman25.tres" type="DynamicFont" id=5]

[node name="CharacterDisplay" type="Control"]
margin_right = 400.0
margin_bottom = 176.0
rect_min_size = Vector2( 400, 176 )
rect_clip_content = true
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cr_bg" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 176.0
mouse_filter = 1
color = Color( 0.92549, 1, 0.929412, 0.258824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 176.0
custom_constants/separation = 103
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="hbox"]
margin_right = 128.0
margin_bottom = 176.0

[node name="char_icon" type="TextureRect" parent="hbox/vbox"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="hbox/vbox"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 5 )
text = "???"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="hbox"]
margin_left = 231.0
margin_right = 391.0
margin_bottom = 176.0
rect_min_size = Vector2( 160, 176 )
color = Color( 1, 1, 1, 0.180392 )

[node name="bot_diff_label" parent="." instance=ExtResource( 3 )]
margin_left = 176.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 160.0
mouse_filter = 1
max_value = 5.0

[node name="value_label" parent="bot_diff_label/Panel/VBoxContainer/CenterContainer2" index="0"]
margin_left = 3.0
margin_right = 77.0
text = "<hardness>"

[connection signal="mouse_entered" from="bot_diff_label" to="." method="_on_bot_diff_label_mouse_entered"]
[connection signal="value_changed" from="bot_diff_label" to="." method="_on_bot_diff_label_value_changed"]

[editable path="bot_diff_label"]
